--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/rhkdwh91/movieql#readme",
   "dependencies": {
+    "axios": "^0.20.0",
     "graphql-yoga": "^1.18.3",
     "node-fetch": "^2.6.1"
   },
